[package]
name = "rust-actix-web-restful-example"
version = "0.1.0"
authors = ["explooosion <ta7382@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
serde = "1.0.104"
env_logger = "0.7.1"
